created 2 modules - frontend and backend. Will remove existing frontend once the new frontend module is stable.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
-target/**
-.idea/**
-taskfunnelweb.iml
-src/main/resources/static/bower_components/**
-src/main/resources/static/css/.sass-cache/**
-src/main/resources/static/css/*.map
+backend/target/**
+backend/.idea/**
+backend/task-blocks.iml
+backend/src/main/resources/static/bower_components/**
+backend/src/main/resources/static/css/.sass-cache/**
+backend/src/main/resources/static/css/*.map
 *.patch
-src/main/resources/static/css/*.css
+backend/src/main/resources/static/css/*.css
+frontend/node_modules/**
+frontend/.editorconfig
+frontend/.babelrc
