--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "bootstrap-vue": "^2.0.0-rc.11",
+    "bootstrap": "^4.1.1",
     "hoek": "^5.0.3",
     "vue": "^2.5.11",
     "vue-smooth-dnd": "^0.1.5"
