--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,16 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "npm install && cross-env NODE_ENV=production webpack --progress"
   },
   "dependencies": {
     "bootstrap": "^4.1.1",
     "hoek": "^5.0.3",
+    "jquery": "3.3.1",
+    "popper.js": "^1.9.1",
+    "simplemde-theme-base": "^0.2.1",
     "vue": "^2.5.11",
+    "vue-simplemde": "^0.4.8",
     "vue-smooth-dnd": "^0.1.5"
   },
   "browserslist": [
