--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@ backend/src/main/resources/static/css/.sass-cache/**
 backend/src/main/resources/static/css/*.map
 *.patch
 backend/src/main/resources/static/css/*.css
-frontend/node_modules/**
-frontend/.editorconfig
-frontend/.babelrc
+node_modules/**
+.editorconfig
 *.iml
